UmsCollectionLocation: cleanups, corrections, fixes

This fixes UmsCollectionLocation to be on par with Amarok standards.
This is the first part of making the USB Mass Storage collection behave
like it should.

BUGFIXES:
 * Remove empty folders when deleting tracks from USB Mass Storage collection.
 * Don't copy tracks to USB Mass Storage collection in move operation.
 * Fix defunct aborting of transfers to USB Mass Storage collection.

BUG: 290448
FIXED-IN: 2.6
DIGEST: bugfix
CCMAIL: Bart Cerneels <bart.cerneels@kde.org>